<resources>
    <string name="app_name">Ancop_Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Events</string>
    <string name="leaders">Leaders</string>
    <string name="library">Books</string>
    <string name="add_event">Add event</string>
    <string name="add_leaders">Add leader</string>
    <string name="add_books">Add book</string>
    <string name="event_details">Event details</string>
    <string name="add_image_button">Add image button</string>
    <string name="leader_name">Name</string>
    <string name="leader_position">Position</string>
    <string name="mobile_number">Mobile number</string>
    <string name="add">Add</string>
    <string name="leader_image">leader image</string>
    <string name="book_name">Name</string>
    <string name="book_title">Book title</string>
    <string name="book_available">Available</string>
    <string name="add_btn">Add</string>
    <string name="event_image">Event image</string>
    <string name="please_wait">Please_Wait</string>
    <string name="upload_event_successful">Event has been added successfully</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="this_app_is_decided_to_the_ancop_family_gregory_university">This_app_is_decided_to_the_ancop_family_gregory_university</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_image_design">User image design</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="full_name">Full name</string>
</resources>