<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddLeaderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/leader_image_image_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/leader_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_place_holder" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_leader_image_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/add_image_button"
                    app:srcCompat="@drawable/ic_baseline_add_24" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_leader_name_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:hint="@string/leader_name"
                app:layout_constraintTop_toBottomOf="@id/frame_layout_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_leader_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:text="Nnamdi Ayogu" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_leader_position_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:hint="@string/leader_position"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_leader_name_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_leader_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    tools:text="ICT Director" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_leader_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/add"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>