<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/event_image_image_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/event_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_place_holder" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_event_image_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/add_image_button"
                    app:srcCompat="@drawable/ic_baseline_add_24" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_add_details_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:hint="@string/event_details"
                android:maxHeight="20dp"
                app:layout_constraintTop_toBottomOf="@id/frame_layout_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_event_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minLines="10"
                    tools:text="Sample text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_event_details_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/add_btn"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>